<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="180dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <LinearLayout
        android:id="@+id/buttonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <Button

            android:id="@+id/btnCurRUR"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/rur" />

        <Button

            android:id="@+id/btnCurUSD"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/usd" />

        <Button

            android:id="@+id/btnCurEUR"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/eur" />

        <Button

            android:id="@+id/btnCurGBP"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/gbp" />

        <Button

            android:id="@+id/btnCurCHF"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/chf" />

        <Button

            android:id="@+id/btnCurCNY"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/cny" />
    </LinearLayout>
    <EditText
        android:id="@+id/amountEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="2000"
        android:textSize="@dimen/amountTextSize"
        android:layout_below="@id/buttonBar"
        />
    <TextView
        android:id="@+id/rateDescriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/amountEditText"
        android:text="rate: 1.2334456787"
        />
</RelativeLayout>
